--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,29 +1,6 @@
-# Gopkg.toml example
-#
-# Refer to https://golang.github.io/dep/docs/Gopkg.toml.html
-# for detailed Gopkg.toml documentation.
-#
-# required = ["github.com/user/thing/cmd/thing"]
-# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
-#
-# [[constraint]]
-#   name = "github.com/user/project"
-#   version = "1.0.0"
-#
-# [[constraint]]
-#   name = "github.com/user/project2"
-#   branch = "dev"
-#   source = "github.com/myfork/project2"
-#
-# [[override]]
-#   name = "github.com/x/y"
-#   version = "2.4.0"
-#
-# [prune]
-#   non-go = false
-#   go-tests = true
-#   unused-packages = true
-
+[prune]
+  go-tests = true
+  unused-packages = true
 
 [[constraint]]
   name = "github.com/go-kit/kit"
@@ -39,11 +16,15 @@
 
 [[constraint]]
   name = "github.com/goph/emperror"
-  version = "0.9.1"
+  version = "0.11.0"
 
 [[constraint]]
   name = "github.com/gorilla/mux"
   version = "1.6.2"
+
+[[constraint]]
+  name = "github.com/joho/godotenv"
+  version = "1.3.0"
 
 [[constraint]]
   name = "github.com/pkg/errors"
@@ -52,7 +33,3 @@
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.2.2"
-
-[prune]
-  go-tests = true
-  unused-packages = true
