Add instrumentation to database

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,3 +33,11 @@
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.2.2"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/opencensus-integrations/ocsql"
+
+[[constraint]]
+  name = "go.opencensus.io"
+  version = "0.17.0"
