Add jaeger tracing

--- a/.env.dist
+++ b/.env.dist
@@ -7,3 +7,7 @@ DB_PORT=3306
 DB_USER=root
 DB_PASS=root
 DB_NAME=database
+
+JAEGER_ENABLED=false
+JAEGER_ENDPOINT=http://localhost:14268
+JAEGER_AGENT_ENDPOINT=localhost:6831
