Adjust configuration defaults

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
-ENVIRONMENT=production
-DEBUG=false
-LOG_FORMAT=json
+ENVIRONMENT=development
+DEBUG=true
+LOG_FORMAT=logfmt
 
 DB_HOST=127.0.0.1
 DB_PORT=3306
