--- a/.env.dist
+++ b/.env.dist
@@ -9,6 +9,8 @@ DB_USER=root
 DB_PASS=root
 DB_NAME=database
 
+PROMETHEUS_ENABLED=false
+
 JAEGER_ENABLED=false
 JAEGER_ENDPOINT=http://localhost:14268
 JAEGER_AGENT_ENDPOINT=localhost:6831
