Add redis config

--- a/.env.dist
+++ b/.env.dist
@@ -9,6 +9,9 @@ DB_USER=root
 DB_PASS=root
 DB_NAME=database
 
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+
 PROMETHEUS_ENABLED=false
 
 JAEGER_ENABLED=false
