--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -41,3 +41,7 @@
 [[constraint]]
   name = "go.opencensus.io"
   version = "0.17.0"
+
+[[constraint]]
+  name = "github.com/gomodule/redigo"
+  version = "2.0.0"
