Add basic health check

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -45,3 +45,7 @@
 [[constraint]]
   name = "github.com/gomodule/redigo"
   version = "2.0.0"
+
+[[constraint]]
+  name = "github.com/InVisionApp/go-health"
+  version = "1.1.2"
