Improve docker debug

--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -1,4 +1,4 @@
-FROM golang:1.11-alpine
+FROM golang:1.11-alpine AS builder
 
 RUN apk add --update --no-cache ca-certificates git
 
@@ -9,11 +9,13 @@ FROM alpine:3.7
 
 RUN apk add --update --no-cache libc6-compat
 
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=builder /go/bin/dlv /
+
 ARG BUILD_DIR
 ARG BINARY_NAME
 
 COPY $BUILD_DIR/$BINARY_NAME /service
-COPY --from=0 /go/bin/dlv /
 
 EXPOSE 8000 10000 40000
 CMD ["/dlv", "--listen=:40000", "--headless=true", "--api-version=2", "--log", "exec", "--", "/service", "--instrument-addr", ":10000", "--http-addr", ":8000"]
