--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -15,8 +15,9 @@
   version = "1.4.0"
 
 [[constraint]]
-  name = "github.com/goph/conf"
-  version = "0.4.0"
+  name = "github.com/spf13/viper"
+  branch = "master"
+  #version = "1.2.1"
 
 [[constraint]]
   name = "github.com/goph/emperror"
