--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -13,4 +13,4 @@ ARG BINARY_NAME
 COPY $BUILD_DIR/$BINARY_NAME /service
 
 EXPOSE 8000 10000
-CMD ["/service", "--maintenance-addr", ":10000", "--http-addr", ":8000"]
+CMD ["/service", "--instrumentation.addr", ":10000", "--app.addr", ":8000"]
