--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,5 +13,6 @@ linters-settings:
 
 issues:
     exclude:
-        - "Error return value of `\\(.*/github.com/go-kit/kit/log.Logger\\).Log` is not checked"
+        #- "Error return value of `\\(.*/github.com/go-kit/kit/log.Logger\\).Log` is not checked"
+        - "Error return value of `\\(github.com/go-kit/kit/log.Logger\\).Log` is not checked"
         - G104
