Fix linter exclusion rules

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,6 +13,5 @@ linters-settings:
 
 issues:
     exclude:
-        #- "Error return value of `\\(.*/github.com/go-kit/kit/log.Logger\\).Log` is not checked"
-        - "Error return value of `\\(github.com/go-kit/kit/log.Logger\\).Log` is not checked"
+        - "Error return value of `\\((.*/)?github.com/go-kit/kit/log.Logger\\).Log` is not checked"
         - G104
