Add integration test running to CI configs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,13 @@ jobs:
 
             -
                 run:
+                    name: Run integration tests
+                    command: make test-integration
+                    environment:
+                        VERBOSE: 1
+
+            -
+                run:
                     name: Run linter
                     command: make lint
 
