--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
     - export $(make varexport-DOCKER_IMAGE)
 
 script:
-    - TEST_RANDOMIZE=true VERBOSE=1 make check
+    - VERBOSE=1 make test test-integration lint
     - if [[ $TRAVIS_TAG = "$VERSION" ]]; then export DOCKER_LATEST=1; fi
     - make docker
     - make docker-debug
