--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ before_script:
 
 script:
     - make test test-integration lint
+    - make test-integration
+    - make lint
     - if [[ $TRAVIS_TAG = "$VERSION" ]]; then export DOCKER_LATEST=1; fi
     - make docker
     - make docker-debug
