--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
     - export $(make varexport-DOCKER_IMAGE)
 
 script:
-    - make test test-integration lint
+    - make test
     - make test-integration
     - make lint
     - if [[ $TRAVIS_TAG = "$VERSION" ]]; then export DOCKER_LATEST=1; fi
