--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -3,7 +3,7 @@
   unused-packages = true
 
 [[constraint]]
-  name = "github.com/InVisionApp/go-logging"
+  name = "github.com/InVisionApp/go-logger"
   version = "1.0.1"
 
 [[constraint]]
@@ -20,8 +20,7 @@
 
 [[constraint]]
   name = "github.com/spf13/viper"
-  branch = "master"
-  #version = "1.2.1"
+  version = "1.3.0"
 
 [[constraint]]
   name = "github.com/InVisionApp/go-health"
