--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -7,16 +7,12 @@
   version = "1.0.1"
 
 [[constraint]]
-  name = "github.com/go-kit/kit"
-  version = "0.8.0"
-
-[[constraint]]
   name = "github.com/pkg/errors"
   version = "0.8.0"
 
 [[constraint]]
   name = "github.com/goph/emperror"
-  version = "0.12.0"
+  version = "0.13.0"
 
 [[constraint]]
   name = "github.com/spf13/viper"
@@ -57,3 +53,7 @@
 [[constraint]]
   name = "github.com/gomodule/redigo"
   version = "2.0.0"
+
+[[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.2.0"
