--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -3,8 +3,12 @@
   unused-packages = true
 
 [[constraint]]
-  name = "github.com/InVisionApp/go-logger"
-  version = "1.0.1"
+  name = "github.com/spf13/viper"
+  version = "1.3.0"
+
+[[constraint]]
+  name = "github.com/goph/logur"
+  version = "0.3.0"
 
 [[constraint]]
   name = "github.com/pkg/errors"
@@ -12,11 +16,11 @@
 
 [[constraint]]
   name = "github.com/goph/emperror"
-  version = "0.13.0"
+  version = "0.14.0"
 
 [[constraint]]
-  name = "github.com/spf13/viper"
-  version = "1.3.0"
+  name = "github.com/InVisionApp/go-logger"
+  version = "1.0.1"
 
 [[constraint]]
   name = "github.com/InVisionApp/go-health"
