--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -8,7 +8,7 @@
 
 [[constraint]]
   name = "github.com/goph/logur"
-  version = "0.4.0"
+  version = "0.5.0"
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
@@ -61,3 +61,11 @@
 [[constraint]]
   name = "github.com/gomodule/redigo"
   version = "2.0.0"
+
+[[constraint]]
+  name = "github.com/ThreeDotsLabs/watermill"
+  version = "0.1.2"
+
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "1.0.2"
