Rename mga prefix

--- a/etc/ansible/roles/application-setup/tasks/ingress.yml
+++ b/etc/ansible/roles/application-setup/tasks/ingress.yml
@@ -3,7 +3,7 @@
     name: Configure nginx virtualhost
     template:
         src: nginx.conf
-        dest: "/etc/nginx/conf.d/{{ mga_server_name }}.conf"
+        dest: "/etc/nginx/conf.d/{{ app_server_name }}.conf"
         owner: root
         group: root
         mode: 0644
