--- a/etc/ansible/roles/application-setup/templates/nginx.conf
+++ b/etc/ansible/roles/application-setup/templates/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name "{{ mga_server_name }}";
+    server_name "{{ app_server_name }}";
 
     location / {
         proxy_set_header Host $host;
