--- a/etc/ansible/roles/application-setup/tasks/app.yml
+++ b/etc/ansible/roles/application-setup/tasks/app.yml
@@ -3,7 +3,7 @@
     name: Create application configuration
     template:
         src: config.toml
-        dest: "{{ user.home }}/etc/{{ mga_service_name }}.toml"
+        dest: "{{ user.home }}/etc/{{ app_service_name }}.toml"
         owner: "{{ user.name }}"
         group: "{{ user.name }}"
         mode: 0600
@@ -12,7 +12,7 @@
     name: Create systemd configuration
     template:
         src: modern-go-application.service
-        dest: "{{ user.home }}/.config/systemd/user/{{ mga_service_name }}.service"
+        dest: "{{ user.home }}/.config/systemd/user/{{ app_service_name }}.service"
         owner: "{{ user.name }}"
         group: "{{ user.name }}"
         mode: 0600
@@ -20,7 +20,7 @@
 -
     name: Enable systemd service
     systemd:
-        name: "{{ mga_service_name }}"
+        name: "{{ app_service_name }}"
         enabled: true
         scope: user
     become: true
