Refactor ansible deployment to user docker

--- a/etc/ansible/roles/application-setup/molecule/default/molecule.yml
+++ b/etc/ansible/roles/application-setup/molecule/default/molecule.yml
@@ -16,6 +16,8 @@ provisioner:
   name: ansible
   lint:
     name: ansible-lint
+  playbooks:
+    prepare: prepare.yml
 scenario:
   name: default
 verifier:
