--- a/etc/ansible/roles/application-setup/defaults/main.yml
+++ b/etc/ansible/roles/application-setup/defaults/main.yml
@@ -1,12 +1,12 @@
 ---
+# Default application name
+app_name: mga
+
 # Default deployment and application user
 app_user_name: mga
 
 # Default SSH authorized keys for the application user
 app_authorized_keys: []
 
-# Default service name
-app_service_name: mga
-
 # Default server name for nginx proxy
-app_server_name: modern-go-application
+app_server_name: modern-go-application.local
