--- a/etc/ansible/roles/application-setup/tasks/user.yml
+++ b/etc/ansible/roles/application-setup/tasks/user.yml
@@ -4,6 +4,8 @@
     user:
         name: "{{ app_user_name }}"
         shell: /bin/bash
+        groups: docker
+        append: true
         state: present
     register: user
 
@@ -25,9 +27,8 @@
         group: "{{ user.name }}"
         mode: 0700
     with_items:
-        - bin
-        - log
         - etc
+
         - .config/systemd/user
 
 # Required for user scope systemd
