--- a/etc/ansible/roles/deployment/molecule/default/playbook.yml
+++ b/etc/ansible/roles/deployment/molecule/default/playbook.yml
@@ -5,5 +5,5 @@
     binary_source: ../../../../../../build
     binary_name: modern-go-application-docker
   roles:
-    - role: application-setup
+    # - role: application-setup
     - role: deployment
