--- a/etc/ansible/roles/application-setup/defaults/main.yml
+++ b/etc/ansible/roles/application-setup/defaults/main.yml
@@ -1,12 +1,12 @@
 ---
 # Default application name
-app_name: mga
+app_name: app
 
 # Default deployment and application user
-app_user_name: mga
+app_user_name: app
 
 # Default SSH authorized keys for the application user
-app_authorized_keys: []
+app_user_authorized_keys: []
 
 # Default server name for nginx proxy
-app_server_name: modern-go-application.local
+app_server_name: application.local
