--- a/etc/ansible/roles/application-setup/templates/nginx.conf
+++ b/etc/ansible/roles/application-setup/templates/nginx.conf
@@ -7,6 +7,6 @@ server {
     location / {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_pass http://localhost:8000;
+        proxy_pass http://127.0.0.1:8000;
     }
 }
