--- a/config.toml.dist
+++ b/config.toml.dist
@@ -27,7 +27,7 @@ host = "localhost"
 port = 3306
 user = "root"
 pass = ""
-name = "database"
+name = "app"
 params = { charset = "utf8mb4" }
 
 [redis]
