--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,11 +76,9 @@ release:
 .docker: &docker_definition
     stage: packaging
     image: docker:stable
-    variables: &docker_definition_variables
+    variables:
         DOCKER_HOST: tcp://docker:2375/
         DOCKER_DRIVER: overlay2
-        DOCKER_PREBUILT: 1
-        DOCKER_TAG: ${CI_COMMIT_REF_NAME}
     services:
         - docker:dind
     before_script:
@@ -88,8 +86,8 @@ release:
         - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
         - apk add --update --no-cache ca-certificates make
     script:
-        - BINARY_NAME=$(make var-BINARY_NAME) make docker
-        - BINARY_NAME=$(make var-BINARY_NAME)-debug make docker-debug
+        - docker build --build-arg BUILD_DIR=build --build-arg BINARY_NAME=$(make var-BINARY_NAME) -t ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME} -f Dockerfile.local .
+        - docker build --build-arg BUILD_DIR=build --build-arg BINARY_NAME=$(make var-BINARY_NAME)-debug -t ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME}-debug -f Dockerfile.debug .
         - docker push ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME}
         - docker push ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME}-debug
 
@@ -102,17 +100,16 @@ docker:snapshot:
 
 docker:release:
     <<: *docker_definition
-    variables:
-        <<: *docker_definition_variables
-        DOCKER_LATEST: 1
     dependencies:
         - release
     only:
         - tags
     script:
-        - BINARY_NAME=$(make var-BINARY_NAME) make docker
-        - BINARY_NAME=$(make var-BINARY_NAME)-debug make docker-debug
+        - docker build --build-arg BUILD_DIR=build --build-arg BINARY_NAME=$(make var-BINARY_NAME) -t ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME} -f Dockerfile.local .
+        - docker build --build-arg BUILD_DIR=build --build-arg BINARY_NAME=$(make var-BINARY_NAME)-debug -t ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME}-debug -f Dockerfile.debug .
         - docker push ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME}
         - docker push ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME}-debug
+        - docker tag ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME} ${DOCKER_IMAGE}:latest
+        - docker tag ${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME}-debug ${DOCKER_IMAGE}:latest-debug
         - docker push ${DOCKER_IMAGE}:latest
         - docker push ${DOCKER_IMAGE}:latest-debug
