--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -69,3 +69,7 @@
 [[constraint]]
   name = "github.com/gofrs/uuid"
   version = "3.2.0"
+
+[[constraint]]
+  name = "github.com/mccutchen/go-httpbin"
+  version = "1.1.1"
