--- a/.banzaicloud/pipeline.yaml
+++ b/.banzaicloud/pipeline.yaml
@@ -7,7 +7,7 @@ pipeline:
     image: banzaicloud/ci-pipeline-client:0.10
     action: EnsureCluster
 
-  build:
+  test:
     image: golang:1.11
     commands: make vendor check
     environment:
